fix(js): отработать метод render

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mesto",
   "version": "5.0.0",
-  "description": "* Ссылка на работу\r * Ссылка на макет\r * План работы\r * Обнаруженные трудности/замечания\r * Процесс рефакторинга v.2.0 после первого ревью\r * Исправление ошибок и рефакторинг v.3.0\r * Исправление ошибок и рефакторинг v.4.0\r * Создание классов, работа с ООП, рефакторинг v.5.0\r * Список веток",
+  "description": "JS-learning, Yandex-Praktikum",
   "main": "index.js",
   "scripts": {
     "build": "rimraf dist && webpack",
